# iris

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Source/: CMakeLists.txt
Source/Binary_serializer/: Binary_serializer.cppm  Binary_serializer.tests.cpp  CMakeLists.txt  Generated.cppm  Generics.cppm
Source/Builder/: CMakeLists.txt  main.cpp
Source/Common/: CMakeLists.txt  Common.cpp  Common.cppm  Filesystem.cppm  Filesystem_common.cpp  Filesystem_common.cppm  Filesystem_linux.cpp  Filesystem_windows.cpp
Source/Compiler/: Analysis.cpp  Analysis.cppm  Analysis.tests.cpp  Builder.cpp  Builder.cppm  Builder.tests.cpp  CMakeLists.txt  Clang_code_generation.cpp  Clang_code_generation.cppm  Clang_compiler.cpp  Clang_compiler.cppm  Clang_data.cppm  Clang_forward_declarations.h  Common.cpp  Common.cppm  Compile_commands_generator.cppm  Compiler.cpp  Compiler.cppm  Compiler.tests.cpp  Debug_info.cpp  Debug_info.cppm  Debug_info_formatter.cpp  Debug_info_formatter.cppm  Diagnostic.cpp  Diagnostic.cppm  Expressions.cpp  Expressions.cppm  Instructions.cpp  Instructions.cppm  Linker.cppm  Linker_coff.cpp  Linker_elf.cpp  Profiler.cppm  Recompilation.cpp  Recompilation.cppm  Recompilation.tests.cpp  Test_framework.cpp  Test_framework.cppm  Types.cpp  Types.cppm  (+4 more)
Source/Compiler/JIT/: Core_module_layer.cpp  Core_module_layer.cppm  File_watcher.cpp  File_watcher.cppm  JIT_compiler.cpp  JIT_compiler.cppm  JIT_runner.cpp  JIT_runner.cppm  JIT_runner.tests.cpp  Recompile_module_layer.cpp  Recompile_module_layer.cppm
Source/Compiler/Passes/: All_passes.cpp  All_passes.cppm  All_passes.tests.cpp  Compile_time_pass.cpp  Compile_time_pass.cppm  Compile_time_pass.tests.cpp  Implicit_function_pass.cpp  Implicit_function_pass.cppm  Implicit_function_pass.tests.cpp  Import_usages_pass.cpp  Import_usages_pass.cppm  Instantiate_pass.cpp  Instantiate_pass.cppm  Instantiate_pass.tests.cpp  Pass_test_helpers.cppm
Source/Compiler/Project/: Artifact.cpp  Artifact.cppm  Artifacts.tests.cpp  Presets.cpp  Presets.cppm  Presets.tests.cpp  Project.cpp  Project.cppm  Project.tests.cpp  Repository.cpp  Repository.cppm  Repository.tests.cpp  Target.cppm  Target_linux.cpp  Target_windows.cpp
Source/Compiler/passes/: All_passes.cpp  All_passes.cppm  All_passes.tests.cpp  Compile_time_pass.cpp  Compile_time_pass.cppm  Compile_time_pass.tests.cpp  Implicit_function_pass.cpp  Implicit_function_pass.cppm  Implicit_function_pass.tests.cpp  Instantiate_pass.cpp  Instantiate_pass.cppm  Instantiate_pass.tests.cpp  Pass_test_helpers.cppm
Source/Core/: CMakeLists.txt  Core.cpp  Core.cppm  Declarations.cpp  Declarations.cppm  Expressions.cpp  Expressions.cppm  Expressions_visitor.cppm  Formatter.cpp  Formatter.cppm  Hash.cpp  Hash.cppm  Hash.tests.cpp  String_hash.cppm  Struct_layout.cppm  Types.cpp  Types.cppm
Source/Core/Execution_engine/: Execution_engine.cpp  Execution_engine.cppm  Execution_engine.tests.cpp
Source/Graph/: CMakeLists.txt  Graph.cpp  Graph.cppm  Module_dependency_graph.cpp  Module_dependency_graph.cppm  Module_dependency_graph.tests.cpp
Source/Interoperability/: CMakeLists.txt  C_header_exporter.cpp  C_header_exporter.cppm  C_header_exporter.tests.cpp  C_header_hash.cpp  C_header_hash.cppm  C_header_hash.tests.cpp  C_header_importer.cpp  C_header_importer.cppm  C_header_importer.tests.cpp  C_macro_parser.cpp  C_macro_parser.cppm  main.cpp
Source/JSON_serializer/: CMakeLists.txt  Generated.cppm  Generics.h  JSON_serializer.cppm  JSON_serializer.tests.cpp  Operators.cppm  Read_json.cppm  Write_json.cppm
Source/Language_server/: Breakpoint.cppm  CMakeLists.txt  Code_action.cpp  Code_action.cppm  Completion.cpp  Completion.cppm  Completion.tests.cpp  Core.cpp  Core.cppm  Debug.cppm  Diagnostics.cpp  Diagnostics.cppm  Go_to_location.cpp  Go_to_location.cppm  Go_to_location.tests.cpp  Hover.cpp  Hover.cppm  Hover.tests.cpp  Inlay_hints.cpp  Inlay_hints.cppm  Inlay_hints.tests.cpp  Location.cpp  Location.cppm  Message_handler.cpp  Message_handler.cppm  Server.cpp  Server.cppm  Server.tests.cpp  Signature_help.cpp  Signature_help.cppm  Signature_help.tests.cpp  main.cpp
Source/Parser/: CMakeLists.txt  Convertor.cpp  Convertor.cppm  Convertor.tests.cpp  Module_examples.cpp  Module_examples.cppm  Parse_tree.cpp  Parse_tree.cppm  Parser.cpp  Parser.cppm  Parser.tests.cpp  Type_name_parser.cpp  Type_name_parser.cppm  main.cpp
Source/Parser/tree-sitter-hlang/: grammar.js
Source/Parser/tree-sitter-hlang/src/: grammar.json  node-types.json  parser.c
Source/Parser/tree-sitter-hlang/test/corpus/: reflection.txt  soa_array_type.txt  soa_array_view_type.txt  test_framework.txt
Source/Parser/tree-sitter-iris/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
Source/Parser/tree-sitter-iris/bindings/c/: tree-sitter-iris.h  tree-sitter-iris.pc.in
Source/Parser/tree-sitter-iris/src/: grammar.json  node-types.json  parser.c
Source/Parser/tree-sitter-iris/test/corpus/: alias.txt  array_slices.txt  assert_expressions.txt  assignment_expressions.txt  binary_expressions.txt  binary_expressions_operator_precedence.txt  bit_fields.txt  block_expressions.txt  booleans.txt  break_expressions.txt  char_literals.txt  comment_alias.txt  comment_enums.txt  comment_functions.txt  comment_global_variables.txt  comment_imports.txt  comment_module_declaration.txt  comment_structs.txt  comment_unions.txt  compile_time_expressions.txt  constant_array_expressions.txt  contracts.txt  declaration_attributes.txt  defer_expressions.txt  dereference_and_access.txt  enum.txt  enum_flags.txt  for_loop_expressions.txt  function_constructor.txt  function_pointer_types.txt  function_without_definition.txt  global_variables.txt  hello_world.txt  (+23 more)
Tools/code_generator/: CMakeLists.txt  Code_generator.cpp  Code_generator.cppm  Code_generator.tests.cpp  main.cpp
Tools/tests_result_replacer/: CMakeLists.txt  Tests_results_replacer.cpp  Tests_results_replacer.cppm  Tests_results_replacer.tests.cpp  main.cpp
(+471 files in other folders)
