add_subdirectory("Common")
add_subdirectory("Core")
add_subdirectory("Graph")
add_subdirectory("Parser")
add_subdirectory("Compiler")
add_subdirectory("Interoperability")
add_subdirectory("Binary_serializer")
add_subdirectory("JSON_serializer")
add_subdirectory("Builder")
add_subdirectory("Language_server")
